--- a/app.json
+++ b/app.json
@@ -529,6 +529,10 @@
     {
       "name": "zzeb-star",
       "url": "https://raw.githubusercontent.com/fishdown/Icon/master/app/zzeb-star.png"
+    },
+    {
+      "name": "zzeb-star2",
+      "url": "https://raw.githubusercontent.com/fishdown/Icon/master/app/zzeb-star2.png"
     }
   ]
 }
